Re-Submit Assiggnment recize photo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#06a6c2" />
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals " />
     <meta name="keywords" content="web development, final project" />
     <meta name="author" content="Cristian Moisés De La Hoz Escorcia" />
@@ -50,8 +51,8 @@
                 src="images/my_photo.jpeg"
                 alt="Cristian Moisés De La Hoz Escorcia"
                 class="profile-img"
-                width="200"
-                height="200"
+                loading="lazy"
+                decoding="async"
               />
             </div>
           </div>
@@ -61,8 +62,6 @@
               src="images/colombia_flag.jpg"
               alt="Official Flag of Colombia"
               class="flag"
-              width="150"
-              height="100"
             />
             <p class="flag-caption">Official Flag of Colombia</p>
           </div>
