Re-Submit Assiggnment - correct error

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#06a6c2" />
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals " />
-    <meta name="keywords" content="web development, final project" />
-    <meta name="author" content="Cristian Moisés De La Hoz Escorcia" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#06a6c2">
+    <meta name="description" content="Portfolio of Cristian Moisés De La Hoz Escorcia for the WDD 131 – Dynamic Web Fundamentals course at BYU-Idaho, including projects and web development resources.">
+    <meta name="keywords" content="web development, final project">
+    <meta name="author" content="Cristian M De La Hoz Escorcia">
     <title>
       WDD 131 – Dynamic Web Fundamentals – Cristian Moisés De La Hoz Escorcia
     </title>
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
   </head>
   <body>
     <header>
-      <h2>WDD131: Dynamic Web Fundamentals</h2>
+      <h2><span id="course-title">WDD 131: Dynamic Web Fundamentals</span></h2>
       <nav class="navigation">
         <a
           href="https://www.linkedin.com/in/cristian-mois%C3%A9s-de-la-hoz-escorcia-473b8b27?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
@@ -26,14 +26,14 @@
           href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
           >Scripture</a
         >
-        <a href="images/dummy_600x400_ffffff_cccccc.png">Final Project</a>
+        <a href="images/placeholder.png">Final Project</a>
       </nav>
     </header>
     <main>
       <h1>Cristian Moisés De La Hoz Escorcia</h1>
       <div class="parent">
-        <section class="section primary">
-          <h3>About Me</h3>
+        <section class="card section primary">
+          <h2>About Me</h2>
           <div class="about-content">
             <div class="about-text">
               <p class="text2">
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="flag-section">
-            <h4>Bogotá, Colombia</h4>
+            <h3>Bogotá, Colombia</h3>
             <img
               src="images/colombia_flag.webp"
               alt="Official Flag of Colombia"
@@ -71,8 +71,8 @@
             rainforest, and Caribbean coast.
           </p>
         </section>
-        <aside class="section secondary">
-          <h3>Web Dev Resources</h3>
+        <section class="card section secondary">
+          <h2>Web Dev Resources</h2>
           <ul>
             <li>
               <a href="https://www.youtube.com/watch?v=qm0IfG1GyZU"
@@ -85,10 +85,22 @@
             </li>
             <li><a href="https://www.w3schools.com">W3 Schools</a></li>
             <li>
-              <a href="https://placeholderimage.dev/">Image Placeholder</a>
+              <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development">MDN Web Docs (Mozilla)</a>
+            </li>
+            <li>
+              <a href="https://www.codecademy.com/">Codecademy</a>
+            </li>
+            <li>
+              <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>
+            </li>
+            <li>
+              <a href="https://learn.microsoft.com/">Microsoft Learn</a>
+            </li>
+            <li>
+              <a href="https://learn.microsoft.com/">Frontend Mentor</a>
             </li>
           </ul>
-        </aside>
+        </section>
       </div>
     </main>
     <footer>
