--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#06a6c2">
-    <meta name="description" content="Portfolio of Cristian Moisés De La Hoz Escorcia for the WDD 131 – Dynamic Web Fundamentals course at BYU-Idaho, including projects and web development resources.">
+    <meta name="description" content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources.">
     <meta name="keywords" content="web development, final project">
     <meta name="author" content="Cristian M De La Hoz Escorcia">
     <title>
       WDD 131 – Dynamic Web Fundamentals – Cristian Moisés De La Hoz Escorcia
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
   </head>
@@ -104,7 +107,7 @@
       </div>
     </main>
     <footer>
-      <p id="currentyear"></p>
+      <p><span id="currentyear"></span></p>
       <p id="lastModified"></p>
     </footer>
   </body>
