--- a/place.html
+++ b/place.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#5B2C6F" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#5B2C6F">
     <meta
       name="description"
       content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources."
-    />
-    <meta name="keywords" content="web development, final project" />
-    <meta name="author" content="Cristian M De La Hoz Escorcia" />
+    >
+    <meta name="keywords" content="web development, final project">
+    <meta name="author" content="Cristian M De La Hoz Escorcia">
     <title>
       WDD 131 – Dynamic Web Fundamentals – Cristian Moisés De La Hoz Escorcia
     </title>
