Submit W04 Assignment: Picture Album EnhancementV2

--- a/index.html
+++ b/index.html
@@ -51,20 +51,12 @@
               </p>
             </div>
             <div class="photo_section">
-              <img
-                src="images/my_photo.webp"
-                alt="Cristian Moisés De La Hoz Escorcia"
-                class="profile-img"
-              />
+              <img src="images/my_photo.webp" alt="Cristian Moisés De La Hoz Escorcia" class="profile-img">
             </div>
           </div>
           <div class="flag-section">
             <h3>Bogotá, Colombia</h3>
-            <img
-              src="images/colombia_flag.webp"
-              alt="Official Flag of Colombia"
-              class="flag"
-            />
+            <img src="images/colombia_flag.webp" alt="Official Flag of Colombia" class="flag">
             <p class="flag-caption">Official Flag of Colombia</p>
           </div>
           <p class="text2">
