--- a/place.html
+++ b/place.html
@@ -13,13 +13,10 @@
     <title>
       WDD 131 – Dynamic Web Fundamentals – Cristian Moisés De La Hoz Escorcia
     </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/place.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
   </head>
   <body>
@@ -32,17 +29,17 @@
         <source
           srcset="images/san-andres-1920w.webp"
           media="(min-width: 1000px)"
-        />
+        >
         <source
           srcset="images/san-andres-1024w.webp"
           media="(min-width: 550px)"
-        />
+        >
         <img
           src="images/san-andres-480w.webp"
           alt="San Andrés, Colombia"
           width="400"
           height="200"
-        />
+        >
       </picture>
       <section class="info-section">
         <section class="weather-card" id="data">
@@ -62,7 +59,7 @@
             class="weather-icon"
             src="images/weather-svgrepo-com.svg"
             alt="weather icon"
-          />
+          >
           <p><strong>Temperature:</strong> <span id="temp">—</span> °C</p>
           <p><strong>Condition:</strong> <span id="conditions">—</span></p>
           <p><strong>Wind:</strong> <span id="wind">—</span> km/h</p>
