--- a/week02/bom.html
+++ b/week02/bom.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <title>WDD 230 | Home</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This page has been designed as part of my learning. 
-    This description is temporary while we develop it."/>
-    <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link href="images/logo-ccf-t.png" rel="icon"/>
+    This description is temporary while we develop it.">
+    <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
+    <link href="images/logo-ccf-t.png" rel="icon">
     <title>Book of Mormon</title>
-    <link rel="stylesheet" href="styles/bom-styles.css" />
+    <link rel="stylesheet" href="styles/bom-styles.css">
 </head>
 <body>
 <hl>📘  Book of Mormon - Top 25</hl>
