--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Media Query Example</title>
-    <meta
-      name="description"
-      content="Media query learning activity example page."
-    />
-    <meta name="author" content="Cristian De La Hoz Escorcia" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-    />
-    <link rel="stylesheet" href="styles/media-query.css" />
-    <link rel="stylesheet" href="styles/media-query-large.css" />
+    <meta name="description" content="Media query learning activity example page.">
+    <meta name="author" content="Cristian De La Hoz Escorcia">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="stylesheet" href="styles/media-query.css">
+    <link rel="stylesheet" href="styles/media-query-large.css">
   </head>
   <body>
     <header>
