--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -1,25 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#5B2C6F" />
-    <meta
-      name="description"
-      content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources."
-    />
-    <meta name="keywords" content="web development, final project" />
-    <meta name="author" content="Cristian M De La Hoz Escorcia" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#5B2C6F">
+    <meta name="description" content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources.">
+    <meta name="keywords" content="web development, final project">
+    <meta name="author" content="Cristian M De La Hoz Escorcia">
     <title>
       WDD 131 – Responsive Images
     </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/responsive-images.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/responsive-images.css">
     <script src="scripts/responsive-images.js" defer></script>
   </head>
   <body>
@@ -28,14 +22,9 @@
     </header>
     <main>
       <picture class="hero">
-        <source srcset="images/hero-large.webp" media="(min-width: 1000px)" />
-        <source srcset="images/hero-medium.webp" media="(min-width: 550px)" />
-        <img
-          src="images/hero-small.webp"
-          alt="Bogotá Colombia Temple"
-          width="400"
-          height="200"
-        />
+        <source srcset="images/hero-large.webp" media="(min-width: 1000px)">
+        <source srcset="images/hero-medium.webp" media="(min-width: 550px)">
+        <img src="images/hero-small.webp" alt="Bogotá Colombia Temple" width="400" height="200">
       </picture>
     </main>
     <footer>
