--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -1,23 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#5B2C6F" />
-    <meta
-      name="description"
-      content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources."
-    />
-    <meta name="keywords" content="web development, final project" />
-    <meta name="author" content="Cristian M De La Hoz Escorcia" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#5B2C6F">
+    <meta name="description" content="Cristian De La Hoz's portfolio for WDD 131 – Dynamic Web Fundamentals at BYU-Idaho with projects and resources.">
+    <meta name="keywords" content="web development, final project">
+    <meta name="author" content="Cristian M De La Hoz Escorcia">
     <title>lazyload – WDD 131 – Cristian</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/lazyload.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/lazyload.css">
     <script src="scripts/lazyload.js" defer></script>
   </head>
   <body>
